Setup webpack and babel

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 
 <head>
-  <title>Daily React</title>
+  <title>Daily Webpack React App of Awesome</title>
 </head>
 
 <body>
   <div id="root"></div>
-  <script src="./index.js"></script>
+  <script src="./bundle.js"></script>
 </body>
 
 </html>
